<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative_layout_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tile_height"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_step_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            app:tabBackground="@drawable/tab_indicator_selector"
            app:tabIndicatorHeight="0dp"
            app:tabMinWidth="0dp"
            app:tabMode="scrollable" />

        <ImageView
            android:id="@+id/iv_arrow_left_step_detail"
            android:layout_width="@dimen/tile_height"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/image_description"
            android:paddingBottom="@dimen/vertical_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingTop="@dimen/vertical_margin"
            android:src="@drawable/ic_arrow_left" />

        <ImageView
            android:id="@+id/iv_arrow_right_step_detail"
            android:layout_width="@dimen/tile_height"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/image_description"
            android:paddingBottom="@dimen/vertical_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingTop="@dimen/vertical_margin"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_step_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relative_layout_tab" />
</RelativeLayout>
